Added first part of landing page

--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
-<style>
-    h1 {    
-        color:darkslateblue;
-        font-family: Helvetica;
-        border: 0px;
-    }
-    h3 {
-        color:darkslateblue;
-        font-family: Helvetica;
-        border: 0px
-    }
-    #p01 {
-        border: 1px solid black;
-        width: 200px;
-    }
-    p {
-        color: black;
-        font-family: Helvetica;
-    }
-</style>
 <head>
     <title>Kellogg Cuisine Project</title>
+    <styles>
+        <link rel="stylesheet" href="styles.css">
+    </styles>
 </head>
 <h1>The Kellogg Cuisine Project</h1>
 <!-- Kellogg oriented logo -->
@@ -32,7 +15,7 @@
 <br><br>
 
 <!-- form for logging into the site -->
-<form id="p01">
+<form id="log_in">
     Username (Kellogg ID):
     <input type="text" name="username"><br>
     Password ("recipe"):
