--- a/landing.html
+++ b/landing.html
@@ -1,1 +1,27 @@
-<h1>Hello World</h1>
+<head>
+    <styles>
+        <link rel="stylesheet" src="styles.css">   
+    </styles>
+</head>
+
+<!-- Need to add the ability to take a user name from the user and display it here -->
+<h4>Hello, [INSERT USERNAME HERE]</h4>
+
+<img src="Cooks.PNG" alt="Kellogg Students Cooking">
+
+<table>
+    <th>
+        <td>
+            Meal
+        </td>
+        <td>
+            Recipe Name
+        </td>
+        <td>
+            Dietary Need
+        </td>
+        <td>
+            
+        </td>
+    </th>
+</table>
